--- a/Project 3 Data Warehouse/dwh.cfg
+++ b/Project 3 Data Warehouse/dwh.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST=dwhcluster.crvfqylmexoy.us-west-2.redshift.amazonaws.com
-DB_NAME=dwh
-DB_USER=dwhuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
+HOST=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
 
 [IAM_ROLE]
-ARN=arn:aws:iam::581301956092:role/dwhRole
+ARN=
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
@@ -14,17 +14,17 @@ LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
 SONG_DATA='s3://udacity-dend/song_data'
 
 [AWS]
-KEY=AKIAYOWCL5X6BRI7UZ5O
-SECRET=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
+KEY=
+SECRET=
 
 [DWH] 
 DWH_CLUSTER_TYPE=multi-node
 DWH_NUM_NODES=4
 DWH_NODE_TYPE=dc2.large
 
-DWH_IAM_ROLE_NAME=dwhRole
-DWH_CLUSTER_IDENTIFIER=dwhCluster
-DWH_DB=dwh
-DWH_DB_USER=dwhuser
-DWH_DB_PASSWORD=Passw0rd
-DWH_PORT=5439
+DWH_IAM_ROLE_NAME=
+DWH_CLUSTER_IDENTIFIER=
+DWH_DB=
+DWH_DB_USER=
+DWH_DB_PASSWORD=
+DWH_PORT=
