--- a/Project 4 Data Lake/dl.cfg
+++ b/Project 4 Data Lake/dl.cfg
@@ -1,3 +1,3 @@
 [AWS]
-AWS_ACCESS_KEY_ID=AKIAWYGIHCXGMQ6LOHRA
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
