--- a/Capstone Project/dwh.cfg
+++ b/Capstone Project/dwh.cfg
@@ -1,17 +1,17 @@
 [CLUSTER]
-HOST=redshift-cluster-1.ccftyi8dghcq.us-west-2.redshift.amazonaws.com
-DB_NAME=dev
-DB_USER=awsuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
+HOST=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
 
 [IAM_ROLE]
-ARN=arn:aws:iam::624032513208:role/dwhRole
+ARN=
 
 [S3]
-ECOMMERCE_DATA=s3://binariesgoalls-capstone-project/brazillian-ecommerce-datasets/
-MARKETING_FUNNEL_DATA=s3://binariesgoalls-capstone-project/marketing-funnel-datasets/
+ECOMMERCE_DATA=s3://[your_bucket]/brazillian-ecommerce-datasets/
+MARKETING_FUNNEL_DATA=s3://[your_bucket]t/marketing-funnel-datasets/
 
 [AWS]
-KEY=AKIAZCSZ4PS4CFGOVCZI
-SECRET=9VStVtRaAWigsFQ854UV4dxrLuo+lZ+m1rE82dB8
+KEY=
+SECRET=
