--- a/Capstone Project/dwh.cfg
+++ b/Capstone Project/dwh.cfg
@@ -1,17 +1,30 @@
 [CLUSTER]
-HOST=redshift-cluster-1.ccftyi8dghcq.us-west-2.redshift.amazonaws.com
-DB_NAME=dev
-DB_USER=awsuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
+HOST=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
 
 [IAM_ROLE]
-ARN=arn:aws:iam::624032513208:role/dwhRole
+ARN=
 
 [S3]
-ECOMMERCE_DATA=s3://binariesgoalls-capstone-project/brazillian-ecommerce-datasets/
-MARKETING_FUNNEL_DATA=s3://binariesgoalls-capstone-project/marketing-funnel-datasets/
+LOG_DATA='s3://udacity-dend/log_data'
+LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
+SONG_DATA='s3://udacity-dend/song_data'
 
 [AWS]
-KEY=AKIAZCSZ4PS4CFGOVCZI
-SECRET=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
+KEY=
+SECRET=
+
+[DWH] 
+DWH_CLUSTER_TYPE=multi-node
+DWH_NUM_NODES=4
+DWH_NODE_TYPE=dc2.large
+
+DWH_IAM_ROLE_NAME=
+DWH_CLUSTER_IDENTIFIER=
+DWH_DB=
+DWH_DB_USER=
+DWH_DB_PASSWORD=
+DWH_PORT=
