--- a/Capstone Project/dwh.cfg
+++ b/Capstone Project/dwh.cfg
@@ -9,22 +9,9 @@ DB_PORT=
 ARN=
 
 [S3]
-LOG_DATA='s3://udacity-dend/log_data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song_data'
+ECOMMERCE_DATA=s3://[your_bucket]/brazillian-ecommerce-datasets/
+MARKETING_FUNNEL_DATA=s3://[your_bucket]t/marketing-funnel-datasets/
 
 [AWS]
 KEY=
 SECRET=
-
-[DWH] 
-DWH_CLUSTER_TYPE=multi-node
-DWH_NUM_NODES=4
-DWH_NODE_TYPE=dc2.large
-
-DWH_IAM_ROLE_NAME=
-DWH_CLUSTER_IDENTIFIER=
-DWH_DB=
-DWH_DB_USER=
-DWH_DB_PASSWORD=
-DWH_PORT=
